jambeth-expr, jambeth-expr-exp4j: added new modules to src. added @PropertyExpression-feature for calculated values of entity properties